--- a/style/assignment.css
+++ b/style/assignment.css
@@ -10,3 +10,20 @@
     padding: 12px 35px; border-radius: 10px;
     border: none;
 }
+.c{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.d{
+    text-align: center;
+    margin: 100px 50px;
+}
+.e{
+    font-weight: bold;
+    font-size: 40px;
+}
+header{
+    background-image: url("../Assets/Hero-bg.png");
+    height: 450px; width: 100%;
+}
