--- a/style/assignment.css
+++ b/style/assignment.css
@@ -27,3 +27,19 @@ header{
     background-image: url("../Assets/Hero-bg.png");
     height: 450px; width: 100%;
 }
+.f{
+    display: flex;
+    justify-content: space-between;
+    margin: 50px;
+}
+.g{
+    height: 200px;width: 200px;
+    border-radius: 10px;
+}
+.h{
+    color: #FFFFFF;
+    background-color: #4E47FF;
+    margin: 0px;
+    padding: 12px 35px; border-radius: 10px;
+    border: none;
+}
